--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <a href="https://www.facebook.com/" target="_blank" class="home__social-link">
                         <i class="ri-facebook-box-fill"></i>
                     </a>
-                    <a href="https://www.instagram.com/sangamtravels2021/" target="_blank" class="home__social-link">
+                    <a href="https://www.instagram.com/maldives_tours_balasinor/" target="_blank" class="home__social-link">
                         <i class="ri-instagram-fill"></i>
                     </a>
                 </div>
@@ -246,7 +246,7 @@
                             <a href="https://www.facebook.com/" target="_blank" class="footer__social">
                                 <i class="ri-facebook-box-fill"></i>
                             </a>
-                            <a href="https://www.instagram.com/sangamtravels2021/" target="_blank" class="footer__social">
+                            <a href="https://www.instagram.com/maldives_tours_balasinor/" target="_blank" class="footer__social">
                                 <i class="ri-instagram-fill"></i>
                             </a>
 
